objects/tffa__PerformanceLogConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings to turn on performance tracing</description>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the performance tracing is turned on</description>
        <inlineHelpText>If the performance tracing is turned on</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__RetentionPeriod__c</fullName>
        <defaultValue>1</defaultValue>
        <description>It is the period of time after which performance logs will be purged from the system.</description>
        <inlineHelpText>Performance logs older than this period will be purged from the system.</inlineHelpText>
        <label>Log retention period in days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ThresholdInMilliseconds__c</fullName>
        <defaultValue>20</defaultValue>
        <description>A minimum threshold in milliseconds to log performance logs. Useful in reducing database entries. Log will be captured if time taken is more than the specified threshold time.</description>
        <inlineHelpText>A minimum threshold in milliseconds to log performance logs. Useful in reducing database entries</inlineHelpText>
        <label>ThresholdInMilliseconds</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Performance Log Configuration</label>
</CustomObject>